--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,40 +1,28 @@
 <main role="main">
-        <section class="jumbotron text-center">
+        <section class="jumbotron text-center" id="kitchen">
                 <div class="container">
-                        <h1 class="jumbotron-heading">Hexa Kitchen Menu</h1>
+                        <h1 class="jumbotron-heading" style="color: white">Hexa Kitchen Menu</h1>
                         <h2 class="lead text-muted">Deliciousness Jumping into the Mouth...</h2>
-<<<<<<< HEAD
-
+                      
                 </div>
         </section>
 
         <div class="album py-5 bg-light" >
                 <div class="container" >
-=======
-                        <!-- <p>
-                                <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                                <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-                        </p> -->
-                </div>
-        </section>
-
-        <div class="album py-5 bg-light">
-                <div class="container">
->>>>>>> 686a2a29248c3ed8fa7aee60e5a18c5003aa0f51
-                        <div class="row">
+                        <div class="row" >
                                 <div class="col-md-4">
                                         <div class="card mb-4 box-shadow">
 
                                                 <img class="card-img-top"
                                                         data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                                        alt="Thumbnail [100%x225]" src="assets/images/indian-food.jpg"
+                                                        alt="Thumbnail [100%x225]" src="assets/images/chinese.gif"
                                                         data-holder-rendered="true"
-                                                        style="height: 225px; width: 100%; display: block;">
+                                                        style="height: 225px; width: 100%;">
                                                 <div class="card-body d-flex flex-column">
                                                         <h2>Indo-Chinese</h2>
                                                         <p class="card-text">
                                                                         Indian Chinese cuisine or Sino-Indian cuisine is the adaptation of Chinese seasoning and
-                                                                        cooking techniques to Indian tastes through a larger offering to also include vegetarian dishes.
+                                                                        cooking techniques to Indian tastes through a larger offering to also include vegetarian dishes. 
                                                                         The Indian-style Chinese cuisine is said to have been developed by the small Chinese community that has lived in Kolkata for over a century.
                                                         </p>
                                                         <div class="d-flex justify-content-between align-items-center">
@@ -54,9 +42,9 @@
                                         <div class="card mb-4 box-shadow">
                                                 <img class="card-img-top"
                                                         data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                                        alt="Thumbnail [100%x225]" src="assets/images/indian-food.jpg"
+                                                        alt="Thumbnail [100%x225]" src="assets/images/north.gif"
                                                         data-holder-rendered="true"
-                                                        style="height: 225px; width: 100%; display: block;">
+                                                        style="height: 225px; width: 100%;">
                                                 <div class="card-body d-flex flex-column">
                                                         <h2>North Indian</h2>
                                                         <p class="card-text">
@@ -83,14 +71,14 @@
 
                                                 <img class="card-img-top"
                                                         data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail"
-                                                        alt="Thumbnail [100%x225]" src="assets/images/indian-food.jpg"
+                                                        alt="Thumbnail [100%x225]" src="assets/images/south.gif"
                                                         data-holder-rendered="true"
-                                                        style="height: 225px; width: 100%; display: block;">
+                                                        style="height: 225px; width: 100%;">
                                                 <div class="card-body d-flex flex-column">
                                                         <h2>South Indian</h2>
                                                         <p class="card-text">
                                                                 South Indian cuisine includes the cuisines of the five southern states of India—Andhra Pradesh, Karnataka, Kerala, Tamil Nadu and Telangana—and the union territories of Lakshadweep, Pondicherry, and the Andaman and Nicobar Islands.
-
+                                                        
                                                         </p>
                                                         <br>
                                                         <br>
